fixed z-index

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -96,6 +96,7 @@ body {
           }
       }
       .content-wrapper {
+          z-index: 5;
          position: relative;
          top: 0;
          left: 0;
@@ -136,6 +137,7 @@ body {
          }
       }
       .pop-up-overlay-wrapper {
+          z-index: 6;
           position: absolute;
           top: 0;
           left: 0;
